fix talking point 1 link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="content">
                 <h2>Vivek is an Anchor Baby</h2>
                 <p>Vivek admitted that neither of his parents were citizens at the time of his birth in a September 2023 interview with NBC's Dasha Burns. 
-                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> (watch video here)</a>
+                    <a href="https://www.youtube.com/watch?v=bM4UpgZ6sQA" target="_blank"> (watch video here)</a>
                  That same month at a Republican Presidential Primary Debate he said he would end birthright citizenship if he were elected.</p>
             </div>
         </section>
