add fourth talking point

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     </header>
 
     <div class="container">
-        <!-- Talking Point 1 -->
         <section class="talking-point">
-            <img src="images/vivek.png" alt="Talking Point 1 Image">
+            <img src="images/nbc.jpg" alt="Image 1">
             <div class="content">
                 <h2>Vivek is an Anchor Baby</h2>
                 <p>Vivek admitted that neither of his parents were citizens at the time of his birth in a September 2023 interview with NBC's Dasha Burns. 
@@ -24,9 +23,8 @@
             </div>
         </section>
 
-        <!-- Talking Point 2 -->
         <section class="talking-point">
-            <img src="images/vivek.png" alt="Talking Point 2 Image">
+            <img src="images/soros.jpg" alt="Image 2">
             <div class="content">
                 <h2>Vivek Received Money from Soros</h2>
                 <p>In 2011 Vivek accepted a $90,000 award from the Paul & Daisy Soros Fellowship for New Americans, which was founded by Daisy and Paul Soros, the late older brother of George Soros. He claimed he needed the money to afford Law School but his tax returns show he was already a multi millionaire at that time.
@@ -34,9 +32,8 @@
             </div>
         </section>
 
-        <!-- Talking Point 3 -->
         <section class="talking-point">
-            <img src="images/vivek.png" alt="Talking Point 3 Image">
+            <img src="images/vivek.png" alt="Image 3">
             <div class="content">
                 <h2>Vivek Moved American Jobs Overseas</h2>
                 <p>Despite saying that he would "gut" the H1-B lottery program, but he himself used the H1-B visa to hire non-American workers for his companies for over half a decade.
@@ -44,16 +41,22 @@
             </div>
         </section>
 
+        <section class="talking-point">
+            <img src="images/axovant.jpg" alt="Image 4">
+            <div class="content">
+                <h2>Vivek Made His Fortune Off Fake Alzheimer's Medicine</h2>
+                <p> Vivek's company Axovant Gene Therapies owned a drug called Intepirdine which failed to pass Phase 2 clinical trials. His solution was to redo the trials, but this time they were conducted by his mother Geetha. Incredibly, the trials demonstrated significant improvements from the last ones, enough to move on to Phase 3. At this point, he took his company public for a $315 million IPO in 2015, the largest of any biotech company in history. When the drug moved onto phase 3 trials that were not conducted by his mother, they failed, and the company lost 75% of its value in a single day. Luckily for Vivek, however, he had already sold tens of millions of dollars in his shares of the company, and so the losses didn't hurt his wallet.
+                    <a href="https://www.newsweek.com/vivek-ramaswamy-fraud-always-has-been-opinion-1823853" target="_blank"> Newsweek report on the subject</a>
+                    <a href="https://en.wikipedia.org/wiki/Vivek_Ramaswamy#Roivant_Sciences_and_subsidiaries" target="_blank"> Wikipedia entry on the subject</a>
+                </p>
+            </div>
+        </section>
+
         <!-- Add more talking-point sections here as needed -->
     </div>
 
     <footer>
-        <p>Contact: your.email@example.com | Phone: (123) 456-7890</p>
-        <p>
-            <a href="https://twitter.com/yourhandle">Twitter</a> |
-            <a href="https://facebook.com/yourpage">Facebook</a> |
-            <a href="https://yourwebsite.com/donate">Donate</a>
-        </p>
+        <p>Don't Vote Vivek</p>
     </footer>
 </body>
 </html>
